# AudioAnalzingTools

simple_anromal_sound_analyzer/: main.py  pyproject.toml
simple_anromal_sound_analyzer/analysis/: envelope_analysis.py  impact_detection.py  periodicity_detection.py
simple_anromal_sound_analyzer/ui/: analysis_widgets.py  plot_widgets.py
test_tools/AudioAndCamera/: main.py  project_description.md  project_info.md  pyproject.toml
test_tools/AudioAndCamera/.vercel/: project.json
test_tools/AudioAndCamera_origin/: work_log.txt
test_tools/Fantest/: FanControl.sln  FanControl.vcxproj  FanController.cpp  FanController.h  README.md  main.cpp  project.md  work_log.txt
test_tools/abf_simul/: README.md  fd_beamforming.py  main.py  mic_array.py  plot_utils.py  project_brief.md  requirements.txt  signal_model.py  work_log.txt
test_tools/abf_simul_2/: README.md  beam_focusing_guide.md  beam_focusing_simulator.py  beam_focusing_tutorial.py  demo.py  gui_demo.py  interactive_demo.ipynb  project_request.md  quick_visual.py  requirements.txt  test_energy_maps.npy  test_simulator.py  test_time_stamps.npy  visual_demo.py  work_log.txt
test_tools/acc_reader/: CMakeLists.txt  README.md  acc.cpp  acc.h  accelerometer_ref.md  audio.cpp  audio.h  audio_record_ref.md  main.cpp  work_log.txt
test_tools/diag_platform/: backend.py  generate_data.py  ingester_app.py  main2 copy.py
test_tools/diag_platform/new/: backend.py  ingester_app.py  labeler_app.py
test_tools/hwinfo/: README.md  gui_app.py  hardware_controller.py  hardware_report.txt  requirements.txt  work_log.txt
test_tools/motor_simul_upgrade/: README.md  main.py  main_gui.py  motor_simulation.py  requirements.txt  work_log.txt
test_tools/motor_simul_upgrade/.vercel/: project.json
test_tools/simple_nidaq/: README.md  daq_settings_demo.json  demo_mode.py  main.py  project_requests.md  requirements.txt  test_installation.py  work_log.txt
test_tools/simple_wav_view/: README.md  audio_processor.py  feature_calculator.py  gui_components.py  hdf5_manager.py  main.py  project_brief.md  requirements.txt  work_log.txt
test_tools/simple_wav_view/.vercel/: project.json
test_tools/ui_custom/: custom_region_widget.py  layout_builder.py  project_example.md  work_log.txt
test_tools/ui_custom/examples/: ex_dock.py  ex_quickstart.py  ex_tabs.py
wav_analyzer_0714/: README.md  demo.py  extract_features.py  main.py  pyproject.toml  test_features.py
wav_analyzer_0714/.trae/rules/: project_rules.md
wav_analyzer_0714/demo_wav_files/: features_extracted.csv
