[project]
name = "audioandcamera"
version = "0.1.0"
description = "동시 녹화 PySerial + 카메라 (장치 유무 자동 감지, Fake 지원)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt5==5.15.10",
    "PyQt5-Qt5==5.15.2",
    "pyserial>=3.5",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyqtgraph>=0.13.0",
    "matplotlib>=3.7.0",
]
